src/objects/Discount__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Item</label>
        <referenceTo>ServiceItem__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>